# expressions-regulieres

./: README.md  pyproject.toml
demo01_valider_email/: email_avec_regex.py  email_sans_regex.py  test_email_sans_regex.py
demo01_valider_email_avec_regex/: email_sans_regex.py  pyproject.toml  test_email_sans_regex.py
demo02_re_python/: demo.py  pyproject.toml
demo02_valider_email_sans_regex/: pyproject.toml  test_email_avec_regex.py
ex01_telephone/: README.md
ex02_codes_produits/: README.md
ex03_date/: README.md
ex04_plaque/: README.md
ex05_telephone_python/: README.md  pyproject.toml  telephone.py  test_telephone.py
ex06_codes_produits_python/: README.md  codes_produits.py  pyproject.toml  test_codes_produits.py
ex07_email_python/: README.md  email.py  pyproject.toml  test_email.py
ex08_logs_python/: README.md  analyse_logs.py  pyproject.toml  test_analyse_logs.py
